Fix vertical scrolling on hammer.js elements and CTA button size on mobile.

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -63,7 +63,9 @@ a {
 
 	.cta {
 		.flex(column, space-evenly, center);
-
+		@media @mobile {
+			width: 100%;
+		}
 		p {
 			color: @white;
 			font-size: 2.4rem;
@@ -79,6 +81,7 @@ a {
 
 			@media @mobile {
 				.flex(column, center, center);
+				width: 100%;
 			}
 		}
 		.cta-buttons {
